nextjs-app/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-nextjs-app.leenet.link
spec:
  hosts:
  - "nextjs-app.leenet.link"
  gateways:
  - neon-ingress/leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: nextjs-app.leenet.svc.cluster.local
          port:
            number: 3000
